# AMMSB

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Makefile  README.md  Tran et al. - 2016 - Stochastic modeling of mesoscopic elasticity random field (1).md  Zhao et al. - 2025 - Epsilon-VAE Denoising as Visual Decoding.md  drifting_model_demo.py  image_runner.sh  make_venv.sh  pyproject.toml  pytest.ini  requirements.txt  runner.sh
csp/: __init__.py  _conditional_bridge.py  _trajectory_layout.py  benchmark.py  bridge_matching.py  conditional_models.py  conditional_training.py  ecmmd.py  paired_prior_bridge.py  sample.py  sde.py  sigma_calibration.py  token_bridge_matching.py  token_dit.py  token_paired_prior_bridge.py  token_sample.py  train.py
data/: datagen.py  generate_fae_data.py  generate_large_corpus.py  multimarginal_generation.py  transform_utils.py
diffmap/: continuous_gh.py  coordinates.py  diffusion_map_coordinates.py  diffusion_maps.py  diffusion_maps_archive.py  distance.py  gaussian_process.py  geometric_harmonics.py  geometric_harmonics_archive.py  kernels.py  lifting.py  plot_diffusion_maps.py  spd_geodesic.py  test_spd_geodesic.py  utils.py
docs/: 99_percent_coverage_multiscale_rff.md  architecture.md  conditional_rollout_correlation_curves.md  conditional_rollout_solver_memory_analysis.md  conventions.md  csp_conditional_evaluation_core.md  evaluation_pipeline.md  frequency_justification_analysis.md  index.md  latent_geometry_formulation.md  latent_geometry_plotting.md  manuscript_figure_map.md  ntk_joint_csp_balancing.md  publication_figures.md  (+9 more)
(+615 files in other folders)
