[project]
name = "mmsfm"
version = "0.0.1"
dependencies = [
    "joblib==1.4.2",
    "numpy==1.26.4",
    "pandas==2.0.3",
    "tables==3.10.1",
    "scipy==1.13.0",
    "tqdm==4.66.4",
    "matplotlib==3.8.4",
    "scikit-learn==1.4.2",
    "pillow==10.3.0",
    "scanpy==1.10.1",
    "pot==0.9.3",
    "scprep==1.2.3",
    "torch==2.3.0",
    "torchvision==0.18.0",
    "torchdyn==1.0.6",
    "torchdiffeq==0.2.3",
    "torchsde==0.2.6",
    "wandb==0.19.3",
]

[tool.setuptools.packages.find]
exclude = [
    "conditional-flow-matching*",
    "MIOFlow*",
]

[build-system]
requires =["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
ignore = ["F722"]

